add filters to swagger annotations
